--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,18 +16,20 @@ issues:
 
 linters:
   enable:
+    - depguard
     - dogsled
+    - dupl
+    - exportloopref
+    - goconst
+    - gocritic
+    - gofmt
     - goimports
     - gosec
-    - stylecheck
-    - goconst
-    - depguard
-    - prealloc
-    - misspell
+    - govet
     - maligned
-    - dupl
+    - misspell
+    - prealloc
+    - revive
+    - staticcheck
+    - stylecheck
     - unconvert
-    - gofmt
-    - golint
-    - gocritic
-    - scopelint
